--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+
 <!-- templates/index.html -->
 <!DOCTYPE html>
 <html>
@@ -6,12 +7,13 @@
 </head>
 <body>
     <h1>Secure File Storage</h1>
+    <a href="{{ url_for('logout') }}">Logout</a>
     <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data">
         <input type="file" name="file" required>
-        <input type="submit" value="Upload">
+        <input type="submit" value="Upload File">
     </form>
 
-    <h2>Encrypted Files</h2>
+    <h2>Encrypted Files and Folders</h2>
     <ul>
         {% for file in encrypted_files %}
         <li>
