--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,28 @@
-
 <!-- templates/index.html -->
 <!DOCTYPE html>
 <html>
 <head>
     <title>Secure File Storage</title>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <h1>Secure File Storage</h1>
-    <a href="{{ url_for('logout') }}">Logout</a>
-    <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data">
-        <input type="file" name="file" required>
-        <input type="submit" value="Upload File">
-    </form>
+    <div class="container">
+        <h1>Secure File Storage</h1>
+        <a href="{{ url_for('logout') }}" class="logout">Logout</a>
+        <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data" class="form">
+            <input type="file" name="file" required>
+            <input type="submit" value="Upload File">
+        </form>
 
-    <h2>Encrypted Files and Folders</h2>
-    <ul>
-        {% for file in encrypted_files %}
-        <li>
-            <a href="{{ url_for('download_file', filename=file) }}">{{ file[:-10] }}</a>
-        </li>
-        {% endfor %}
-    </ul>
+        <h2>Encrypted Files and Folders</h2>
+        <ul class="file-list">
+            {% for file in encrypted_files %}
+            <li>
+                <a href="{{ url_for('download_file', filename=file) }}">{{ file[:-10] }}</a>
+            </li>
+            {% endfor %}
+        </ul>
+    </div>
 </body>
 </html>
+
