--- a/templates/login.html
+++ b/templates/login.html
@@ -18,6 +18,7 @@
             <input type="password" id="password" name="password" required><br><br>
             <input type="submit" value="Login" class="btn">
         </form>
+        <p>Don't have an account? <a href="{{ url_for('register') }}">Register here</a></p>
     </div>
 </body>
 </html>
