--- a/templates/register.html
+++ b/templates/register.html
@@ -13,16 +13,17 @@
         <form action="{{ url_for('register') }}" method="post" class="form">
             <div>
                 <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required>
+                <input type="text" id="username" name="username" required><br><br>
             </div>
             <div>
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required>
+                <input type="password" id="password" name="password" required><br><br>
             </div>
             <div>
                 <input type="submit" value="Register" class="btn">
             </div>
         </form>
+        <p>Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
     </div>
 </body>
 </html>
