--- a/static/styles.css
+++ b/static/styles.css
@@ -1,4 +1,3 @@
-/* static/styles.css */
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -6,19 +5,75 @@ body {
     background-color: #f4f4f4;
 }
 
+#body_index{ /*Add class*/
+    color: white;
+}
+
+html {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+}
+
+#html_register{ /*Add ID*/
+    background-image: url(./register.jpg);
+}
+
+#html_login { /*Add ID*/
+    background-image: url(./Login.jpeg);
+}
+
+#html_index{ /*Add ID*/
+    background-image: url(./index.jpeg);
+}
+
 .container {
-    max-width: 800px;
-    margin: 50px auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 20px;
-    background-color: #fff;
-    border-radius: 5px;
+    text-align: center;
+}
+
+#container_register{ /*Add ID*/
+    background-color: rgba(255,255,255,0.5);
+    border-radius: 15px;
+    box-shadow: -3px 3px rgba(255, 255, 255, 0.3);
+}
+
+#container_login{ /*Add ID*/
+    background-color: rgba(255,255,255,0.6);
+    border-radius: 15px;
+    box-shadow: -3px 3px rgba(255, 255, 255, 0.3);
+}
+
+#container_index{ /*Add ID*/
+    background-color: rgba(0,0,0,0.7);
+    border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.heading {
+    margin-bottom: 20px; /* Add some space between the heading and the hyperlink */
+}
+
+.hyperlink {
+    text-align: left;
+    margin-top: 10px; /* Add some space between the heading and the hyperlink */
 }
 
 h1, h2 {
     text-align: center;
 }
-
+#h1_index, #h2_index{ /*Add ID*/
+    color: whitesmoke;
+}
 .form {
     text-align: center;
 }
@@ -32,23 +87,25 @@ h1, h2 {
 }
 
 .btn {
-    background-color: #4CAF50;
     color: white;
-    padding: 10px 20px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
+#btn_register{ /*Add ID*/
+    background-color: rgb(76, 175, 80);
+    padding: 6px 25px;
+}
 
-.btn:hover {
-    background-color: #45a049;
+#btn_login{ /*Add ID*/
+    background-color: rgb(93, 198, 96);
+    padding: 6px 25px;
 }
 
 .file-list {
     list-style: none;
     padding: 0;
 }
-
 .file-list li {
     margin-bottom: 10px;
 }
@@ -64,3 +121,80 @@ h1, h2 {
     text-decoration: underline;
 }
 
+input {
+    width: 95%;
+    padding: 10px;
+    margin: auto;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    outline: none;
+}
+
+.title{
+    font-size: 15px;
+    text-align: center;
+    color: #fff;
+    user-select: none;
+    border-radius: 15px 20px 15px 20px;
+    background: linear-gradient(-135deg, #c850c0, #4158d0);
+}
+
+.field {
+    height: 50px;
+    width: 100%;
+    margin-top: 20px;
+    position: relative;
+}
+
+.field input{
+    height: 50%;
+    width: 50%;
+    outline: none;
+    font-size: 17px;
+    padding-left: 20px;
+    border: 1px solid lightgrey;
+    border-radius: 25px;
+    transition: all 0.3s ease;
+}
+
+.field input:focus, .field input:valid {
+    border-color: #4158d0;
+}
+
+.field input[type="submit"] {
+    color: #fff;
+    border: none;    
+    margin-top: -10px;
+    font-size: 12px;
+
+    padding-bottom: 10px;
+    cursor: pointer;
+    background: linear-gradient(-135deg, #c850c0, #4158d0);
+    transition: all 0.3s ease;
+    text-align: center;
+}
+
+.field_index input[type="submit"]{ /*Change class*/ /*Check*/
+    color: #fff;
+    border: none;
+    /*DIFF*/padding-left: 0;
+    margin-top: -10px;
+    /*diff*/font-size: 15px;
+    padding-bottom: 10px;
+    /*diff*/font-weight: 500;
+    cursor: pointer;
+    background: linear-gradient(-135deg, #c850c0, #4158d0);
+    transition: all 0.3s ease;
+    text-align: center;
+}
+
+.a_login{ /*ADD Class*/
+    font-weight: bold;  
+}
+.btn::value {
+    vertical-align: middle !important; /* Align label vertically */
+}
+
+#btn_login:hover { /*Add ID*/
+    background-color: rgb(10, 224, 17);
+}
