--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,20 @@
 <!-- templates/index.html -->
 <!DOCTYPE html>
-<html>
+<html id="html_index">
 <head>
     <title>Secure File Storage</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 </head>
-<body>
-    <div class="container">
-        <h1>Secure File Storage</h1>
-        <a href="{{ url_for('logout') }}" class="logout">Logout</a>
+<body id="body_index">
+    <div class="container" id="container_index">
+        <div class="heading"><h1 id="h1_index">Secure File Storage</h1></div>
+        <div class="hyperlink"><a href="{{ url_for('logout') }}" class="logout">Logout</a></div>
         <form action="{{ url_for('upload_file') }}" method="post" enctype="multipart/form-data" class="form">
             <input type="file" name="file" required>
             <input type="submit" value="Upload File">
         </form>
 
-        <h2>Encrypted Files and Folders</h2>
+        <h2 id="h2_index">Encrypted Files and Folders</h2>
         <ul class="file-list">
             {% for file in encrypted_files %}
             <li>
@@ -25,4 +25,3 @@
     </div>
 </body>
 </html>
-
