--- a/templates/login.html
+++ b/templates/login.html
@@ -3,21 +3,39 @@
 <html id="html_login">
 <head>
     <title>Login</title>
-    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    <!-- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}"> -->
+     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container" id="container_login">
-        <h1>Login</h1>
-        {% if error %}
-        <p class="error">{{ error }}</p>
-        {% endif %}
-        <form action="{{ url_for('login') }}" method="post" class="form">
-            <input type="text" id="username" name="username" placeholder="Username" class="user_pass"required><br><br>
-            <input type="password" id="password" name="password" placeholder="Password" class="user_pass" required><br><br>
-            <input type="submit" value="SUBMIT" class="btn" id="btn_login">
-        </form>
-        <p>Don't have an account? <a href="{{ url_for('register') }}" class="a_login">Register here</a></p>
-    </div>
+    <div class="ring">
+        <i style="--clr:#00ff0a;"></i>
+        <i style="--clr:#ff0057;"></i>
+        <i style="--clr:#fffd44;"></i>
+        <div class="login">
+          <h2>Login</h2> 
+          {% if error %}
+          <p class="error">{{ error }}</p>
+          {% endif %}
+          <form action="{{ url_for('login') }}" method="post" class="form">
+          <div class="inputBx">
+            <input type="text" placeholder="Username" class="user_pass"required><br><br>
+          </div>
+          <div class="inputBx">
+            <input type="password" placeholder="Password" class="user_pass" required><br><br>
+          </div>
+          <div class="inputBx">
+            <input type="submit" value="Sign in"><br><br>
+          </div>
+          <div class="links">
+        
+            <p>Don't have an account?
+
+            </p>
+            <a href="{{ url_for('register') }}" class="a_login"> Sign up</a>
+          </div>
+        </div>
+    </form>
+      </div>
 </body>
 </html>
 
